--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.6",
     "@types/d3": "^7.1.0",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
