--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "cypress": "^9.1.0",
     "d3": "^7.1.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
